data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_716.wast
;; 7. **Incorrect Condition Propagation in Loop**    - Design a loop where a condition is computed in one iteration and should influence a `br_if` in subsequent iterations. Verify the propagation of the correct condition value between iterations.    - **Reason**: Checks that the condition value is correctly stored and propagated to subsequent iterations for accurate `br_if` branching.

(assert_invalid
  (module (func
    (loop (result i32)
      (i32.const 1)
      (i32.const 0)
      (br_if 0)
      (i32.const 2)
    )
  ))
  "type mismatch"
)